syntax = "proto3";
package backtesting;


service Greeter {
    rpc SayHello(HelloRequest) returns (HelloReply);
}

message HelloRequest {
    // Request message contains the name to be greeted
    string name = 1;
}

message HelloReply {
    // Reply contains the greeting message
    string message = 1;
}


message Job {
    string id = 1;
    bytes File = 2;
}

message JobsRequest {
    int32 cores = 1;
}

enum WorkerStatus {
    IDLE  = 0;
    RUNNING = 1;
}

message JobsReply {
    repeated Job jobs = 1;
}


service Processor {
    rpc CompleteJob(CompleteRequest) returns(CompleteReply);
    rpc SendStatus(StatusRequest) returns(StatusReply);
    rpc RequestJobs(JobsRequest)  returns (JobsReply);
}

message CompleteRequest {
    string id = 1;
    string data = 2;
}

message CompleteReply {}

message StatusRequest {
    WorkerStatus status = 1;
}
message StatusReply {}
